fix(menu): add z-index for items

--- a/src/stories/menu/Menu.module.scss
+++ b/src/stories/menu/Menu.module.scss
@@ -18,6 +18,7 @@
     align-items: flex-start;
 
     overflow: hidden;
+    z-index: 100;
 }
 
 .leftPosition {
@@ -31,7 +32,7 @@
 }
 
 .menuItem {
-    width: 100%; 
+    width: 100%;
     padding: 8px 16px;
 
     display: flex;
@@ -49,7 +50,7 @@
     &:hover {
         background-color: var(--pte-colors-backgroundSecondary);
     }
-    
+
     @keyframes gradientFlow {
         0% {
             background-position: 0%;
